deploy/base/hello-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello-world
spec:
  ports:
  - port: 3000
    name: http
  type: ClusterIP
  selector:
    app: hello-world
